@@ -23,6 +23,9 @@ Version 0.4i
 * Removed the tongue length variable (which really wasn't used anywhere, and there was no way to change it). Tongue length will be set by tongue race type from now on.
 * Tongue type added to several TFs
 * Added the final of the trio of Terry "Have a Drink" scenes. Requires that Terry has a pussy.
+* Added a new character, Vaughn, to the Outlaws. Written by The Observer.
+ - You must have completed "Outlaws path into Rigard" and Krawitz to unlock him
+ - He has some talk options
 
 --------------------------------------------
              PREVIOUS VERSIONS
